--- a/appsettings.json
+++ b/appsettings.json
@@ -4,10 +4,11 @@
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-    }
+    }    
   },
   "ConnectionStrings": {
     "defaultConnection": "Server=tcp:c19-gamenight.database.windows.net,1433;Initial Catalog=drawing-db;Persist Security Info=False;User ID=dbadmin;Password=;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "KeyVaultName": "learnkvjfv"
 }
